Add Zakljucak. One more paragraf about results needed.

--- a/Rektor_2017/Zakljucak/Zakljucak.tex
+++ b/Rektor_2017/Zakljucak/Zakljucak.tex
@@ -162,6 +162,17 @@
 \usepackage{lscape}
 \begin{document}
 
-ZAKLJUCAK
+U ovom radu je predstavljeno projektiranje i izrada laboratorijskog modela letjelice upravljane novim konceptom upravljanja predstavljenim člankom \cite{haus1}. Potreba za novim konceptom upravljanja proizlazi iz zahtjeva koji su postavljeni projektom MORUS. Projekt MORUS je sponzoriran od strane NATO-ovog programa \textit{Science for Peace and Security}, a osnovni cilj je izrada autonomnog sustava za maritimnu sigurnost i nadzor stanja okoliša. Navedeni sustav se sastoji od autonomnog zračnog vozila(AUV) i autonomnog podvodnog vozila(UAV). Zadatak autonomnog sustava je koordiniranim radom obaviti razne podvodne inspekcije u okruženjima opasnima za čovjeka. U fokusu ovog rada je zračna platforma velike nosivosti ($\geq$ 50kg) i velike autonomijom leta ($\geq$ 30min).  Komercijalne multirotorske letjelice trenutno dostupne na tržištu ne ispunjavaju zadane kriterije, stoga je bilo potrebno pristupiti izradi novog rješenja. Novo rješenje je bazirano na primjeni benzinskih motora, dok je upravljanje zasnovano na promjeni centra mase letjelice, pomičnim masama na krakovima letjelice.
+
+\medskip
+
+Uz sve prednosti koje novi koncept letjelice donosi, dimenzije same MORUS letjelice s benzinskim motorima značajno otežavaju testiranje i verificiranje novog koncepta upravljanja. Kako bi olakšali navedeni proces potrebno je bilo izraditi mali, laboratorijski model letjelice. Laboratorijski model multirotorske letjelice s pomičnim masama je izrađen modifikacijom postojeće laboratorijske letjelice \textit{Arducopter}. Modificirana letjelica \textit{Arducopter} postaje platforma za sve buduće algoritme upravljanja, uključujući planiranje i izvođenje trajektorija, manipulaciju objektima i sl. 
+
+\medskip
+U radu je predstavljen matematički model letjelice koji je osnova projektiranja sustava upravljanja. Parametri matematičkog modela su eksperimentalno utvrđeni postupkom identifikacije. Nakon identifikacije laboratorijskog modela, uslijedilo je projektiranje sustava upravlja predstavljeno člankom \cite{haus2}. Nadalje, postojeća letjelica \textit{Arducopter} je modificirana dodavanjem kliznih mehanizama za pokretne mase. Uz modifikaciju mehaničke konstrukcije, projektirano je elektroničko sklopovlje i pripadna programska potpora. 
+
+\medskip
+DODATI JOŠ JEDAN ODLOMAK O REZULTATIMA
+
 
 \end{document}
