--- a/Rektor_2017/Zahvale/Zahvale.tex
+++ b/Rektor_2017/Zahvale/Zahvale.tex
@@ -162,6 +162,6 @@
 \usepackage{lscape}
 \begin{document}
 
-Zahvale
+Zahvaljujemo se mentoru prof. dr. sc. Stjepanu Bogdanu za svestranu pomoć koju  nam je pružio tijekom izrade ovog rada. Posebnu zahvalnost dugujemo doc. dr. sc. Matku Orsagu i Tomislavu Hausu, mag. ing. koji su nam svojim znanjem i susretljivošću nesebičcno pomogli u izradi ovog rada.
 
 \end{document}
