--- a/Rektor_2017/Sazetak/Sazetak.tex
+++ b/Rektor_2017/Sazetak/Sazetak.tex
@@ -161,7 +161,15 @@
 \usepackage{subcaption}
 \usepackage{lscape}
 \begin{document}
+\noindent Autori: Matija Bedeković, Bruno Marić, Martina Tomić\\
 
-Sazetak
+\noindent Ime rada: Dizajn i razvoj male multirotorske letjelice s upravljanjem zasnovanim na pomičnim masama\\
+
+Ovim radom je pretstavljeno projektiranje i izrada laboratorijskog modela letjelice upravljanje novim konceptom upravljanja. Potreba za novim konceptom proizlazi iz zahtjeva projekta MORUS, koji obuhvaća izradu autonomnog sustava za maritimnu sigurnost i nadzor stanja okoliša. Klasična multirotorska letjelica s električnim motorima je zamjenjena novom letjelicom pogonjenom benzinskim motorima i upravljanom promjenom centra mase. Zbog testiranja i verificiranja novog koncepta letjelice, izrađen je laboratorijski model, koji predstavlja platformu za sva daljnja istraživanja. U radu je predstavljena modifikacija postojeće letjelice \textit{Arducopter}, a modifikacija obuhvaća dodavanje mehanizama pokretnih masa, projektiranje i izradu elektroničkog sklopovlja i programske potpore. Modificirani model je identificiran matematičkim modelom, koji predstavlja osnovu za projektiranje sustava upravnja. Izrađeni model je eksperimentalno testiran u laboratorijskim uvjetima.
+
+
+\noindent Ključne riječi: robotski manipulator, bespilotna letjelica, prošireno korisničko sučelje, 
+
+
 
 \end{document}
