Added reference to Literatura

--- a/Rektor_2017/Literatura/Literatura.tex
+++ b/Rektor_2017/Literatura/Literatura.tex
@@ -176,6 +176,12 @@
   \emph{Design considerations for a large quadrotor with moving mass control},
   International Conference on Unmanned Aircraft Systems (ICUAS),
   2016.
+ 
+\bibitem{haus3}
+  T. Haus, M. Orsag, S. Bogdan,
+  \emph{Mathematical modelling and control of an unmanned aerial vehicle with moving mass control concept},
+  J Intell Robot Syst,
+  March 2017. 
   
 \bibitem{kova}
   Z. Kovačić, S. Bogdan, V. Krajči,
