--- a/Rektor_2017/Model/Model.tex
+++ b/Rektor_2017/Model/Model.tex
@@ -163,7 +163,7 @@
 \usepackage{lscape}
 \begin{document}
 
-U sklopu ovog poglavlja izveden je nelinearni matematički model letjelice koji opisuje njezinu rotaciju i translaciju. Na temelju tog modela obavlja se njegova linearizacija u svrhu dobivanja prijenosne funkcije sustava koja se potom koristi za upravljanje. 
+U sklopu ovog poglavlja izveden je nelinearni matematički model letjelice koji opisuje njezinu rotaciju i translaciju. Na temelju tog modela obavlja se njegova linearizacija u svrhu dobivanja prijenosne funkcije sustava koja se potom koristi za upravljanje. [\cite{haus3}]
 
 \medskip
 
