--- a/Rektor_2017/rektor_2017.tex
+++ b/Rektor_2017/rektor_2017.tex
@@ -17,6 +17,7 @@
 \usepackage{amsfonts}
 \usepackage{amssymb}
 \usepackage{esvect}
+\usepackage{bm}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -150,7 +151,7 @@
 \usepackage{import}
 \usepackage{standalone}
 
-\graphicspath{{Uvod/}, {CAD/}, {Exp/}, {Hardware/}, {Software/}, {Identifikacija/}, {Koncept/}, {Model/}, {Software/Slike/}, {Hardware/figures/},{CAD/figures/}, {Uvod/figures/}}
+\graphicspath{{Uvod/}, {CAD/}, {Exp/}, {Hardware/}, {Software/}, {Identifikacija/}, {Koncept/}, {Model/figures/}, {Software/Slike/}, {Hardware/figures/},{CAD/figures/}, {Uvod/figures/}}
 
 \hypersetup{
   colorlinks   = true, %Colours links instead of ugly boxes
