Added experiment results and comments, need review
Step and sinus responses need to be recorded again this time with
rosbag

--- a/Rektor_2017/rektor_2017.tex
+++ b/Rektor_2017/rektor_2017.tex
@@ -151,7 +151,7 @@
 \usepackage{import}
 \usepackage{standalone}
 
-\graphicspath{{Uvod/}, {CAD/}, {Exp/}, {Hardware/}, {Software/}, {Identifikacija/}, {Koncept/}, {Model/figures/}, {Software/Slike/}, {Hardware/figures/},{CAD/figures/}, {Uvod/figures/}}
+\graphicspath{{Uvod/}, {CAD/}, {Exp/}, {Hardware/}, {Software/}, {Identifikacija/}, {Koncept/}, {Model/figures/}, {Software/Slike/}, {Hardware/figures/},{CAD/figures/}, {Uvod/figures/},{Exp/figures/}}
 
 \hypersetup{
   colorlinks   = true, %Colours links instead of ugly boxes
