Added 4 more literature sources

--- a/Rektor_2017/Literatura/Literatura.tex
+++ b/Rektor_2017/Literatura/Literatura.tex
@@ -192,9 +192,33 @@
 \bibitem{urs}
   S. Bogdan,
   \emph{Zračna robotika: Bespilotne letjelice (UAVs)},
-  Upravljanje robotskim sustavima, Fakultet Elektrotehnike i Računarstva,
+  Upravljanje robotskim sustavima, Fakultet elektrotehnike i računarstva,
   Zagreb 2009/2010.
  
+\bibitem{cpp}
+ J. Šribar, B. Motik,
+ \emph{Demistificirani C++},
+ Element,
+ Zagreb 2014.
+ 
+\bibitem{vukic}
+  Z. Vukić, Lj. Kuljača,
+  \emph{Automatsko upravljanje - Analiza linearnih sustava},
+  Kigen,
+  Zagreb 2005.
+
+\bibitem{mato}
+  M. Baotić,
+  \emph{Sveučilišni priručnik - Sinteza linearnih sustava upravljanja},
+  Sinteza linearnih sustava upravljanja, Fakultet elektrotehnike i računarstva,
+  Zagreb 2016. 
+  
+\bibitem{px4_docu}
+  \emph{PX4 Development Guide}, https://dev.px4.io/,
+  2017.
+
+  
+  
 \end{thebibliography}
 
 
