Added reference Vukic.

--- a/Rektor_2017/Literatura/Literatura.tex
+++ b/Rektor_2017/Literatura/Literatura.tex
@@ -165,6 +165,12 @@
 \bibliographystyle{plain}
 \begin{thebibliography}{9}
 
+\bibitem{urs}
+  S. Bogdan,
+  \emph{Zračna robotika: Bespilotne letjelice (UAVs)},
+  Upravljanje robotskim sustavima, Fakultet Elektrotehnike i Računarstva,
+  Zagreb 2009/2010.
+  
 \bibitem{haus1}
   T. Haus, N. Prkut, K. Borovina, B. Marić, M. Orsag, S. Bogdan,
   \emph{A novel concept of attitude control for large multirotor-UAVs based on moving mass control},
@@ -189,11 +195,12 @@
   Graphis,
   Zagreb 2002.
   
-\bibitem{urs}
-  S. Bogdan,
-  \emph{Zračna robotika: Bespilotne letjelice (UAVs)},
-  Upravljanje robotskim sustavima, Fakultet Elektrotehnike i Računarstva,
-  Zagreb 2009/2010.
+  
+\bibitem{vukic}
+  Z. Vukić, Lj. Kuljača,
+  \emph{Automatsko upravljanje - analiza linearnih sustava},
+  Kigen d.o.o.,
+  Zagreb 2004.
  
 \end{thebibliography}
 
